gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test22680.d
version https://git-lfs.github.com/spec/v1
oid sha256:44a7c3daf9cf1370a603779a1b5aeab52195c8c95449a0516fdc0816ec7220f7
size 276
